...
                MangaDetailLibraryScreen(
                    navigateUp = { navController.navigateUp() },
                    libraryVM = libraryVM,
                    modifier = Modifier
                        .fillMaxSize()
                        .padding(innerPadding)
                        .testTag("detail_screen_library"),
                )
            }

        }

    }
...
